Backend:User page endpoint modification
